parser/tests/snapshots/errors__contract_pub_event.snap
---
source: parser/tests/errors.rs
expression: err

---
error: `pub` qualifier can't be used with event definitions
  ┌─ contract_pub_event:2:2
  │
2 │  pub event E:
  │  ^^^


